[metadata]
name = murano-tempest-plugin
summary = Tempest plugin for the murano project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/murano/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    murano_tempest_tests

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = murano_tempest_tests/locale
domain = murano_tempest_tests

[update_catalog]
domain = murano_tempest_tests
output_dir = murano_tempest_tests/locale
input_file = murano_tempest_tests/locale/murano_tempest_tests.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = murano_tempest_tests/locale/murano_tempest_tests.pot

[entry_points]
tempest.test_plugins =
    murano_tests = murano_tempest_tests.plugin:MuranoTempestPlugin
